Refactor and enhance core functionality across multiple modules
Simplified and improved existing classes by removing unused variables, refining logic, and adding new utilities. Enhanced SMS, mail, and contact management features while updating validation mechanisms. Updated Maven dependencies and streamlined the POM for better compatibility and clarity.